Child configurations are now included in the main configuration.  This means that ear's will again contain their war files nested as before. Added the concept of "additional configurations" to the deployment context, which contain additional configurations creted during the deployment process.  These additional configurations are installed as separate entries in the repo.  J2EE app clients are currently the only user of this feature.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.1@390769 13f79535-47bb-0310-9956-ffa450edef68